<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.android.simplechat.viewmodel.ChatViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include layout="@layout/layout_toolbar" />

            <android.support.design.widget.TabLayout
                android:id="@+id/sliding_tabs"
                style="@style/AppTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed" />
        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_below="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/start_chatting" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/messagesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/footer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clipToPadding="false"
                android:padding="16dp"
                tools:listitem="@layout/message" />

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp">

                <EditText
                    android:id="@+id/messageEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_message"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/sendButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/send" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>